src/sweep/snapshots/linesweeper__sweep__weak_ordering__tests__regression_position_state.snap
---
source: src/sweep/weak_ordering.rs
expression: "snapshot_outputs(segs, 0.1)"
---
[
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(5),
          exit: false,
          enter: true,
          needs_position: true,
          old_idx: Some(3),
        ),
        SegmentOrderEntry(
          seg: SegIdx(4),
          exit: false,
          enter: true,
          needs_position: true,
          old_idx: Some(2),
        ),
        SegmentOrderEntry(
          seg: SegIdx(1),
          exit: false,
          enter: true,
          needs_position: true,
          old_idx: Some(0),
        ),
        SegmentOrderEntry(
          seg: SegIdx(2),
          exit: false,
          enter: true,
          needs_position: true,
          old_idx: Some(1),
        ),
      ],
    ),
    changed: [
      (0, 4),
    ],
  ),
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(5),
          exit: true,
          enter: false,
          needs_position: true,
          old_idx: Some(0),
        ),
        SegmentOrderEntry(
          seg: SegIdx(0),
          exit: false,
          enter: true,
          needs_position: true,
          old_idx: Some(1),
        ),
        SegmentOrderEntry(
          seg: SegIdx(4),
          exit: false,
          enter: false,
          needs_position: false,
          old_idx: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(1),
          exit: false,
          enter: false,
          needs_position: false,
          old_idx: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(2),
          exit: true,
          enter: false,
          needs_position: true,
          old_idx: Some(4),
        ),
        SegmentOrderEntry(
          seg: SegIdx(3),
          exit: false,
          enter: true,
          needs_position: true,
          old_idx: Some(5),
        ),
      ],
    ),
    changed: [
      (0, 2),
      (4, 6),
    ],
  ),
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(0),
          exit: true,
          enter: false,
          needs_position: true,
          old_idx: Some(0),
        ),
        SegmentOrderEntry(
          seg: SegIdx(4),
          exit: false,
          enter: false,
          needs_position: true,
          old_idx: Some(1),
        ),
        SegmentOrderEntry(
          seg: SegIdx(1),
          exit: true,
          enter: false,
          needs_position: true,
          old_idx: Some(2),
        ),
        SegmentOrderEntry(
          seg: SegIdx(3),
          exit: false,
          enter: false,
          needs_position: true,
          old_idx: Some(3),
        ),
      ],
    ),
    changed: [
      (0, 4),
    ],
  ),
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(4),
          exit: true,
          enter: false,
          needs_position: true,
          old_idx: Some(0),
        ),
        SegmentOrderEntry(
          seg: SegIdx(3),
          exit: true,
          enter: false,
          needs_position: true,
          old_idx: Some(1),
        ),
      ],
    ),
    changed: [
      (0, 2),
    ],
  ),
]
